--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -6,3 +6,8 @@ $secondary-color: color("green", "base") !default;
 $success-color: color("green", "lighten-2") !default;
 $error-color: color("red", "lighten-2") !default;
 $link-color: color("green", "base") !default;
+$contraste-fondo: #b7fffe;
+
+$fondo-color: #5047e4;
+
+$resaltado-primary-color: #f0f993;
