--- a/src/scss/materialize-imports.scss
+++ b/src/scss/materialize-imports.scss
@@ -18,3 +18,54 @@ nav {
     0 3px 1px -2px rgba(248, 231, 220, 0.12),
     0 1px 5px 0 rgba(248, 231, 220, 0.2) !important;
 }
+input:not([type]),
+input[type="text"]:not(.browser-default),
+input[type="password"]:not(.browser-default),
+input[type="email"]:not(.browser-default),
+input[type="url"]:not(.browser-default),
+input[type="time"]:not(.browser-default),
+input[type="date"]:not(.browser-default),
+input[type="datetime"]:not(.browser-default),
+input[type="datetime-local"]:not(.browser-default),
+input[type="tel"]:not(.browser-default),
+input[type="number"]:not(.browser-default),
+input[type="search"]:not(.browser-default),
+textarea.materialize-textarea,
+label,
+.input-field > label,
+.prefix,
+.input-field .helper-text,
+i.material-icons:not(.omitir-color) {
+  color: $primary-color;
+}
+
+input:not([type]),
+input[type="text"]:not(.browser-default),
+input[type="password"]:not(.browser-default),
+input[type="email"]:not(.browser-default),
+input[type="url"]:not(.browser-default),
+input[type="time"]:not(.browser-default),
+input[type="date"]:not(.browser-default),
+input[type="datetime"]:not(.browser-default),
+input[type="datetime-local"]:not(.browser-default),
+input[type="tel"]:not(.browser-default),
+input[type="number"]:not(.browser-default),
+input[type="search"]:not(.browser-default),
+textarea.materialize-textarea {
+  font-size: 18px;
+}
+
+.input-field.col .prefix ~ label {
+  font-weight: bold;
+}
+
+.dropdown-content.select-dropdown {
+  background-color: $fondo-color;
+  box-shadow: inset 1px 1px 22px 4px $contraste-fondo !important;
+  span {
+    color: $primary-color;
+  }
+  li:hover {
+    box-shadow: inset 0px 1px 4px 1px $contraste-fondo !important;
+  }
+}
