--- a/src/app/nuevo-juego/nuevo-juego.component.html
+++ b/src/app/nuevo-juego/nuevo-juego.component.html
@@ -194,7 +194,7 @@
         <button
           (click)="addPersona($event)"
           [disabled]="!nombreNuevaPersona.nombre"
-          class="waves-effect waves-light btn btn"
+          class="waves-effect waves-light btn-large btn-envio"
         >
           <i class="material-icons left">person_add</i>
           Agregar Persona
