--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -1,6 +1,6 @@
 <app-header-trineo></app-header-trineo>
 
-<div *ngIf="!noEcontrado; else juegoNoEcontrado" class="contenedor-ice">
+<section *ngIf="!noEcontrado; else plantillaNoEncontrado" class="contenedor-ice">
   <div *ngIf="juego && juego.descripcion">
     <h2 class="titulo-personzalizado">{{ juego.descripcion | uppercase }}</h2>
     <p class="campo-personzalizado">
@@ -44,16 +44,16 @@
       El amigo/a navideño de cada persona será al azar teniendo en cuenta que no
       sea del mismo grupo familiar y no esté restringido.
     </p>
-    <ol class="campo-personzalizado">
+    <ol class="campo-personzalizado listado-personas">
       <li *ngFor="let persona of juego.personas">
-        <p [ngClass]="persona.idPersonaAsignada ? 'exito' : ''">
+        <p [ngClass]="(persona.idPersonaAsignada ? 'exito ' : ' ')+(persona.escogidaPor?'tachado':'')">
           {{ persona.nombre }}
           <span *ngIf="persona.grupoFamiliar"
             >({{ persona.grupoFamiliar }})</span
           >
           <i
             class="btn-icono material-icons omitir-color"
-            (click)="copiaValor(urlSorteo + persona.id)"
+            (click)="copiaValor(urlSorteo + persona.id, $event.target)"
             >content_copy</i
           >
         </p>
@@ -66,5 +66,9 @@
       <span class="texto-resaltado">{{ urlJuego }}</span>
     </p>
   </div>
-</div>
-<ng-template #juegoNoEcontrado> Opps no se econtro ese juego </ng-template>
+</section>
+<ng-template #plantillaNoEncontrado>
+  <section class="contenedor-ice">
+    <h2 class="titulo-personzalizado">No se encontró el juego</h2>
+  </section>
+</ng-template>
