--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -28,8 +28,8 @@ h2 {
 }
 
 .contenedor-ice {
-  width: 50%;
-  padding: 50px 150px 100px 150px;
+  width: 70%;
+  padding: 50px 100px 100px 100px;
   border-radius: 80px;
   box-shadow: inset 15px 10px 46px 23px $contraste-fondo;
   margin: 10px auto;
@@ -51,6 +51,9 @@ h2 {
   color: $error-color;
   cursor: pointer;
 }
+.tachado {
+  text-decoration: line-through;
+}
 .cajon {
   border: 1px dotted $primary-color;
 }
@@ -61,19 +64,41 @@ h2 {
 
 .btn-icono {
   color: $btn-color;
+  cursor: pointer;
 }
 
-.texto-resaltado{
+.texto-resaltado {
   color: $resaltado-primary-color;
   font-weight: 600;
 }
 
-p, span, ul li{
+p,
+span,
+ul li {
   font-size: 1em;
 }
 
-.tamano-mediano{
+.tamano-mediano {
   font-size: 1.4em;
+}
+
+@media (max-width: 1024px) {
+  body {
+    font-size: 16px;
+  }
+  .contenedor-ice {
+    width: 80%;
+    padding: 10px 40px 70px;
+    border-radius: 40px;
+    box-shadow: inset 25px 25px 50px 2px rgb(183 255 254);
+    margin: 10px auto;
+  }
+  .btn {
+    height: 50px;
+    background-color: $btn-color;
+    margin-bottom: 30px;
+    border-radius: 10px;
+  }
 }
 
 @media (max-width: 740px) {
